# granavi

./: .gitignore  IDEAS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
granavi/: node.py
src/granavi/: __init__.py  __main__.py  node.py  session.py
tests/: context.py  test_node.py  test_session.py
