[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "granavi"
version = "0.0.5"
authors = [
  { name="Adrian Enns", email="addis.aden@gmail.com" },
]
description = "Graph navigation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/addisaden/granavi"
"Bug Tracker" = "https://github.com/addisaden/granavi/issues"